--- a/test.lang
+++ b/test.lang
@@ -1,12 +1,51 @@
-int i=0
-while (i <= 10) {
-    i += 1
+float float1 = 32.1302 // Test declaring a float
+cfloat float2 = 32.25423 // Test declaring a constant float
+int int1 = 24241
+cint int2 = 25212
+
+// Test basic arithmetic
+
+int int3 = int1 + int2 - int1 * int2 / int1
+
+// Test basic string declaration
+string str = "Hello my name is bob"
+
+// Test string declaration with escape characters
+
+string str2 = "\tBill said,\r\n \\\\\"\'I need to take the dog out soon\""
+
+// Test basic if statement 
+if (int1 == int2) {
+    doNothing()
 }
-string str = "Hello its elmo"
-if (str == "I went to the park today") {
-    say("what?")
+if (int1 < int2) {
+    doSomething()
 }
 
-for(int i = 0, i < 100, i += 1) {
-    return hello(134, 23, 12)
+if (int1 > int2) {
+    doNothingAgain()
+}
+
+if (int1 != int2) {
+    doSomethingProbably()
+}
+
+if (int1 <= int2) {
+    continueOn()
+}
+
+if (int1 >= int2) {
+    finishIfTests(hello, hello2)
+}
+else {
+    continueTests(Hello, 
+        hello2,
+            hello3)
+}
+
+if ((wegotopark() or wegotogym()) and iscold()) {
+    bringJacket()
+}
+else {
+    dont()
 }
